# machine-learning-intro-project

./: .gitignore  PyTorchNN.ipynb  PyTorchNN_Regression.ipynb  cifar10_classification.py  cisfar10_results.txt  main.py  pyproject.toml  pyvenv.cfg  regression_analysis.py  regression_results.txt
results/: cifar10_results.txt  pytorch_regression_results.txt  regression_results.txt
