[project]
name = "machine-learning-intro-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scikit-learn",
    "seaborn",
    "torch",
    "torchaudio",
    "torchvision",
    "ucimlrepo>=0.0.7",
]

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm7.1"
explicit = false

[tool.uv.sources]
torch = { index = "pytorch-rocm" }
torchvision = { index = "pytorch-rocm" }
torchaudio = { index = "pytorch-rocm" }
